# rust-give-me-diet

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: app.rs  config.rs  lib.rs  main.rs
